# sdu_estimators

./: .gitignore  .readthedocs.yml  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  pyproject.toml  setup.py  sonar-project.properties
.github/workflows/: ci.yml  pypi.yml  sonarcloud.yml
app/: CMakeLists.txt  sdu_estimators_app.cpp
doc/: CMakeLists.txt  conf.py  index.rst  refs.bib  requirements-rtd.txt  requirements.txt  zrefs.bib
doc/pages/: bibliography.rst
doc/pages/api/: api.rst  api_disturbance_observers.irst  api_math.irst  api_parameter_estimators.irst  api_regressor_extension.irst  api_state_estimators.irst
doc/pages/getting_started/: getting_started.rst
doc/pages/how_to_guides/: index.rst  installation.rst
doc/pages/tutorial/: example_gradient_estimator.rst  getting_started.rst  index.rst
examples/: CMakeLists.txt  example_DREM_estimator.cpp  example_DREM_estimator.py  example_SS.cpp  example_gradient_estimator.cpp  example_gradient_estimator.py  sdu_estimators_app.cpp
examples/disturbance_observers/: example_UIO.cpp  example_momentum_observer.cpp  example_momentum_observer.py
examples/integrator/: integrator_example.cpp
examples/manifold/: data1.csv  example_gradient_estimator_sphere.cpp  surface_normal_estimator_RGD.py  test_manifold_init.cpp  test_manifold_init.py
examples/parameter_estimators/: example_DREM_estimator.cpp  example_DREM_estimator.py  example_cascadedDREM_estimator.cpp  example_cascadedDREM_estimator.py  example_gradient_estimator.cpp  example_gradient_estimator.py  example_gradient_estimator_PE.cpp  example_gradient_estimator_normalised.cpp
examples/state_estimators/: example_SS.cpp  example_UIO.cpp  example_luenberger.cpp  example_momentum_observer.cpp  example_momentum_observer.py  example_utils.cpp
examples/structural_parameters/: example_beam.cpp
include/sdu_estimators/: sdu_estimators.hpp  typedefs.hpp  utils.hpp
include/sdu_estimators/disturbance_observers/: momentum_observer.hpp  unknown_input_observer.hpp
include/sdu_estimators/estimators/: drem.hpp  estimator.hpp  gradient_estimator.hpp
include/sdu_estimators/integrator/: integrator.hpp
include/sdu_estimators/math/: persistency_of_excitation.hpp
include/sdu_estimators/math/riemannian_manifolds/: manifold.hpp  sphere.hpp  symmetric_positive_definite.hpp
include/sdu_estimators/parameter_estimators/: cascaded_drem.hpp  drem.hpp  gradient_estimator.hpp  gradient_estimator_sphere.hpp  parameter_estimator.hpp  utils.hpp
include/sdu_estimators/regressor_extensions/: delay.hpp  kreisselmeier.hpp  lti.hpp  ltv.hpp  regressor_extension.hpp
include/sdu_estimators/state_estimators/: greet_fortran.f  luenberger_observer.hpp  momentum_observer.hpp  state_estimator.hpp  state_space_model.hpp  unknown_input_observer.hpp  utils.hpp
python/: plot_csv_files.py
python/sdu_estimators/: __init__.py  _disturbance_observers.cpp  _integrator.cpp  _parameter_estimators.cpp  _regressor_extensions.cpp  _riemannian_manifolds.cpp  _sdu_estimators.cpp
src/: CMakeLists.txt  sdu_estimators.cpp
src/estimators/: drem.cpp  gradient_estimator.cpp
src/regressor_extensions/: kreisselmeier.cpp
src/state_estimators/: luenberger_observer.cpp  state_space_model.cpp  unknown_input_observer.cpp
tests/: CMakeLists.txt  sdu_estimators_t.cpp
tests/python/: test_python_bindings.py
