add_executable(example_gradient_estimator example_gradient_estimator.cpp)
target_link_libraries(example_gradient_estimator PRIVATE sdu_estimators)

add_executable(example_DREM_estimator example_DREM_estimator.cpp)
target_link_libraries(example_DREM_estimator PRIVATE sdu_estimators)

add_executable(example_SS state_estimators/example_SS.cpp)
target_link_libraries(example_SS PRIVATE sdu_estimators)

add_executable(example_luenberger state_estimators/example_luenberger.cpp)
target_link_libraries(example_luenberger PRIVATE sdu_estimators)

add_executable(example_UIO state_estimators/example_UIO.cpp)
target_link_libraries(example_UIO PRIVATE sdu_estimators)

add_executable(test_manifold_init manifold/test_manifold_init.cpp)
target_link_libraries(test_manifold_init PRIVATE sdu_estimators)


# increase stack size
add_executable(example_beam structural_parameters/example_beam.cpp)
target_link_libraries(example_beam PRIVATE sdu_estimators)
target_compile_definitions(example_beam PRIVATE EIGEN_STACK_ALLOCATION_LIMIT=0)

#add_executable(example_utils state_estimators/example_utils.cpp)
#target_link_libraries(example_utils PRIVATE sdu_estimators)